--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -19,18 +19,18 @@
   margin-top: 9%;
   display: flex;
   flex-direction: column;
-  font-size: 34px;
+  font-size: 40px;
   color: #393c41;
   align-items: center;
   flex: 1;
 }
 
 .item_textDesc {
-  font-weight: 200;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .item_lowerThird {
+  margin-top: 25%;
   margin-bottom: 5%;
   display: flex;
   flex-direction: column;
@@ -42,10 +42,29 @@
 }
 
 .item_expand {
-  color: white;
+  color: black;
   width: 100%;
   margin-top: 3%;
   justify-content: center;
   text-align: center;
   cursor: pointer;
+}
+
+.item_expand svg {
+  width: 50px;
+  height: 100px;
+}
+
+.footer {
+  display: flex;
+  flex: 1;
+  color: #393c41;
+  font-weight: 400;
+  font-size: 14px;
+  justify-content: center;
+  background-color: transparent;
+}
+
+.footer > p {
+  margin: 10px;
 }
