--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,6 +38,11 @@
   margin: 10px;
 }
 
+.link_text {
+  text-decoration: none;
+  color: black;
+}
+
 .hidden {
   visibility: hidden;
 }
@@ -47,4 +52,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
